test/Fail/Issue2169.err
Issue2169.agda:17.7-11: error: [UnequalTerms]
0 != -0 of type Float
when checking that the expression refl has type 0 ≡ -0
